Issue #2975920: Changed the z-index for the Varbase Video Player button to 3 to play with tout view modes.

--- a/css/theme/varbase-video-player.theme.css
+++ b/css/theme/varbase-video-player.theme.css
@@ -7,6 +7,7 @@
   left: 0;
   margin: 0;
   cursor: pointer;
+  z-index: 3;
 }
 .video-player-icon:after {
   content: "";
